# aoc-2025

./: .clang-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  justfile
cmake/: AddDay.cmake  RenameFiles.cmake
cmake/templates/: benchmark.cpp  main.cpp  verify.cpp
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/include/aoc25/: algorithm.hpp  algorithm.tpp  check.hpp  day.hpp  file.hpp  logging.hpp  math.hpp  math.tpp  memory.hpp  memory.tpp  meta.hpp  n_ary_tree-hwy.hpp  n_ary_tree.hpp  preprocessor.hpp  simd-hwy.hpp  simd.hpp  simd.tpp  string-hwy.hpp  string.hpp  string.tpp  system.hpp
src/common/src/: day.cpp  file.cpp  logging.cpp  math.cpp  string.cpp  system.cpp
src/day_01/: CMakeLists.txt
src/day_01/include/aoc25/: day_01.hpp
src/day_01/src/: day_01-hwy.cpp  day_01.cpp
src/day_02/: CMakeLists.txt
src/day_02/include/aoc25/: day_02.hpp
src/day_02/src/: day_02.cpp
src/day_03/: CMakeLists.txt
src/day_03/include/aoc25/: day_03.hpp
src/day_03/src/: day_03.cpp
src/day_04/: CMakeLists.txt
src/day_04/include/aoc25/: day_04.hpp
src/day_04/src/: day_04.cpp
src/day_05/: CMakeLists.txt
src/day_05/include/aoc25/: day_05.hpp
src/day_05/src/: day_05.cpp
src/day_06/: CMakeLists.txt
src/day_06/include/aoc25/: day_06.hpp
src/day_06/src/: day_06.cpp
src/day_07/: CMakeLists.txt
src/day_07/include/aoc25/: day_07.hpp
src/day_07/src/: day_07.cpp
src/day_08/: CMakeLists.txt
src/day_08/include/aoc25/: day_08.hpp
src/day_08/src/: day_08.cpp
src/day_09/: CMakeLists.txt
src/day_09/include/aoc25/: day_09.hpp
src/day_09/src/: day_09.cpp
src/day_10/: CMakeLists.txt
src/day_10/include/aoc25/: day_10.hpp
src/day_10/src/: day_10.cpp
src/day_11/: CMakeLists.txt
src/day_11/include/aoc25/: day_11.hpp
src/day_11/src/: day_11.cpp
src/day_12/: CMakeLists.txt
src/day_12/include/aoc25/: day_12.hpp
src/day_12/src/: day_12.cpp
